Wed Aug 03 23:13:36 GMT 2011  Olly Betts <olly@survex.com>

	* configure.ac: -Wshadow gives bogus warnings with 4.0 (at least on Mac
	  OS X), so disable it for GCC < 4.1 (like the comments suggest we
	  already did!)

Wed Aug 03 22:53:55 GMT 2011  Olly Betts <olly@survex.com>

	* configure.ac: Enable -fshow-column for GCC - things like vim's
	  quickfix mode will then jump to the appropriate column for a
	  compiler error or warning, not just the appropriate line.

Wed Aug 03 22:13:26 GMT 2011  Olly Betts <olly@survex.com>

	* api/omdocument.cc,backends/brass/brass_database.cc,
	  backends/chert/chert_database.cc,common/document.h: Document objects
	  now track if term positions might have been modified, so we can avoid
	  having to consider them at all if you take a document and add or
	  remove a boolean filter term.  This gives an 18% speedup for adding
	  tags in notmuch.

Mon Aug 01 15:15:17 GMT 2011  Olly Betts <olly@survex.com>

	* api/Makefile.mk,api/ompostlistiterator.cc,api/postingiterator.cc,
	  include/xapian/postingiterator.h,tests/api_db.cc: Redo
	  PostingIterator based on TermIterator with efficient end iterator
	  checks.

Mon Aug 01 13:34:44 GMT 2011  Olly Betts <olly@survex.com>

	* api/,backends/brass/brass_database.cc,
	  backends/chert/chert_database.cc,
	  backends/inmemory/inmemory_database.cc,common/positionlist.h,
	  examples/delve.cc,include/xapian/positioniterator.h,
	  include/xapian/termiterator.h,include/xapian/valueiterator.h: Take
	  the old SVN end-iterator-proxies branch and rework the TermIterator
	  and PositionIterator reimplementations there to use the same
	  approach as ValueIterator now uses.

Sun Jul 31 15:24:55 GMT 2011  Olly Betts <olly@survex.com>

	* include/xapian/valueiterator.h: Fix comment typo.

Sun Jul 31 14:45:46 GMT 2011  Olly Betts <olly@survex.com>

	* api/omenquire.cc,tests/api_anydb.cc: Previously,
	  Enquire::get_matching_terms_begin() threw InvalidArgumentError if