@@ -173,13 +173,13 @@ Registry::Internal::~Internal()
 void
 Registry::Internal::add_defaults()
 {
-    Xapian::Weight * weight;
-    weight = new Xapian::BM25Weight;
-    wtschemes[weight->name()] = weight;
-    weight = new Xapian::BoolWeight;
-    wtschemes[weight->name()] = weight;
-    weight = new Xapian::TradWeight;
-    wtschemes[weight->name()] = weight;
+    Xapian::Weight * weighting_scheme;
+    weighting_scheme = new Xapian::BM25Weight;
+    wtschemes[weighting_scheme->name()] = weighting_scheme;
+    weighting_scheme = new Xapian::BoolWeight;
+    wtschemes[weighting_scheme->name()] = weighting_scheme;
+    weighting_scheme = new Xapian::TradWeight;
+    wtschemes[weighting_scheme->name()] = weighting_scheme;
 
     Xapian::PostingSource * source;
     source = new Xapian::ValueWeightPostingSource(0);
