@@ -1,3 +1,8 @@
+Thu Aug 04 04:03:37 GMT 2011  Olly Betts <olly@survex.com>
+
+	* api/registry.cc: Rename weight variable to weighting_scheme to avoid
+	  -Wshadow warning.
+
 Wed Aug 03 23:13:36 GMT 2011  Olly Betts <olly@survex.com>
 
 	* configure.ac: -Wshadow gives bogus warnings with 4.0 (at least on Mac
